Bug 95798 - "server name" column of the nick watch list disappears
Summary: "server name" column of the nick watch list disappears
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.15
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-24 22:20 UTC by _
Modified: 2010-07-01 15:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description _ 2004-12-24 22:20:55 UTC
Version:           0.15 (using KDE KDE 3.3.1)
Installed from:    Compiled From Sources
Compiler:          gcc 3.3.4 
OS:                Linux

The "server name" column of the nick watch list disappears after a few seconds, nearly always here. It's enough to keep your mouse on the tab for several seconds.
Comment 1 Peter Simonsson 2005-01-02 01:50:11 UTC
CVS commit by psn: 

Don't show the "server name" column

BUG: 95798


  M +0 -4      nicksonline.cpp   1.87


--- kdeextragear-2/konversation/konversation/nicksonline.cpp  #1.86:1.87
@@ -65,6 +65,4 @@ NicksOnline::NicksOnline(QWidget* parent
     m_kabcIconSet = KGlobal::iconLoader()->loadIconSet("kaddressbook",KIcon::Small);
     m_nickListView->addColumn(i18n("Additional Information"));
-    m_nickListView->addColumn(i18n("Server Name"));
-    m_nickListView->hideColumn(nlvcServerName);
     m_nickListView->setFullWidth(false);
     m_nickListView->setRootIsDecorated(true);
@@ -411,5 +409,4 @@ void NicksOnline::updateServerOnlineList
             this, SLOT(slotNickInfoChanged(Server*, const NickInfoPtr)));
     }
-    m_nickListView->hideColumn(nlvcServerName);
 }
 
@@ -504,5 +501,4 @@ void NicksOnline::refreshAllServerOnline
     }
     // Adjust column widths.
-    m_nickListView->hideColumn(nlvcServerName);
     m_nickListView->adjustColumn(nlvcNetworkNickChannel);
     m_nickListView->adjustColumn(nlvcAdditionalInfo);


Comment 2 Peter Simonsson 2010-07-01 15:55:10 UTC
commit 475b903ba898560dc7c154773aa4e1220c86e323
Author: Peter Simonsson <peter.simonsson@gmail.com>
Date:   Sun Jan 2 00:50:02 2005 +0000

    Don't show the "server name" column
    
    BUG: 95798
    
    svn path=/trunk/kdeextragear-2/konversation/; revision=374794

diff --git a/konversation/nicksonline.cpp b/konversation/nicksonline.cpp
index 030d61e..90ecd8a 100644
--- a/konversation/nicksonline.cpp
+++ b/konversation/nicksonline.cpp
@@ -64,8 +64,6 @@ NicksOnline::NicksOnline(QWidget* parent): ChatWindow(parent)
     m_nickListView->addColumn(i18n("Network/Nickname/Channel"));
     m_kabcIconSet = KGlobal::iconLoader()->loadIconSet("kaddressbook",KIcon::Small);
     m_nickListView->addColumn(i18n("Additional Information"));
-    m_nickListView->addColumn(i18n("Server Name"));
-    m_nickListView->hideColumn(nlvcServerName);
     m_nickListView->setFullWidth(false);
     m_nickListView->setRootIsDecorated(true);
     m_nickListView->setShowToolTips(false);
@@ -410,7 +408,6 @@ void NicksOnline::updateServerOnlineList(Server* servr)
         connect (servr, SIGNAL(nickInfoChanged(Server*, const NickInfoPtr)),
             this, SLOT(slotNickInfoChanged(Server*, const NickInfoPtr)));
     }
-    m_nickListView->hideColumn(nlvcServerName);
 }
 
 /**
@@ -503,7 +500,6 @@ void NicksOnline::refreshAllServerOnlineLists()
         updateServerOnlineList(server);
     }
     // Adjust column widths.
-    m_nickListView->hideColumn(nlvcServerName);
     m_nickListView->adjustColumn(nlvcNetworkNickChannel);
     m_nickListView->adjustColumn(nlvcAdditionalInfo);
     // Refresh addressbook buttons.