Don't show the "server name" column

BUG: 95798

svn path=/trunk/kdeextragear-2/konversation/; revision=374794